--- a/ssd_screencity_dataengineering/ssd_screencity_dataengineering.csproj
+++ b/ssd_screencity_dataengineering/ssd_screencity_dataengineering.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="31.0.3" />
+    <PackageReference Include="GDAL" Version="3.8.4" />
     <PackageReference Include="MySql.Data" Version="8.3.0" />
   </ItemGroup>
 
