--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,18 @@
 {
     "configurations": [
         {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "C#: ssd_screencity_dataengineering",
             "type": "dotnet",
             "request": "launch",
             "projectPath": "${workspaceFolder}\\ssd_screencity_dataengineering\\ssd_screencity_dataengineering.csproj",
             "launchConfigurationId": "TargetFramework=;ssd_screencity_dataengineering"
-        }
+        },
     ]
 }
